--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       - echo Entered the install phase...
       - wget -qO - https://raw.githubusercontent.com/yarnpkg/releases/gh-pages/debian/pubkey.gpg | apt-key add -
       - apt-get update -y
-      - apt install maven
+      - apt install -y maven
       
   pre_build:
     commands:
