--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
   build:
     commands:
       - echo Entered the build phase...
-      - java -versions
+      - java -version
       - mvn -version
       # - echo Build started on 'date'
       # - yarn --version 
